--- a/ansible/roles/uninstall/tasks/main.yaml
+++ b/ansible/roles/uninstall/tasks/main.yaml
@@ -33,6 +33,10 @@
   file: path=/etc/etcd/pki state=absent
   when: "'masters' in group_names"
 
+- name: Clean up etcd certificates on all masters
+  file: path=/etc/kubernetes/pki state=absent
+  when: "'masters' in group_names"
+
 - name: Reboot machine
   command: /sbin/shutdown -r +1
   async: 0
