--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -23,13 +23,22 @@
   tags:
   - ha
 
+- name: Prepare Nodes
+  hosts: nodes
+  remote_user: root
+  gather_facts: yes
+  any_errors_fatal: yes
+  roles:
+  - prepare-nodes
+  tags:
+  - prepare-nodes
+
 - name: Set up masters
   hosts: masters
   remote_user: root
   gather_facts: yes
   any_errors_fatal: yes
   roles:
-  - prepare-nodes
   - {role: client-certs,       when: "'masters'           in group_names" }
   - {role: primary-master,     when: "'primary-master'    in group_names" }
   - {role: secondary-masters,  when: "'secondary-masters' in group_names" }
@@ -43,7 +52,6 @@
   gather_facts: yes
   any_errors_fatal: yes
   roles:
-  - {role: prepare-nodes,      when: "'minions'           in group_names" }
   - {role: disable-scheduling, when: "'primary-master'    in group_names" }
   - {role: join-token,         when: "'primary-master'    in group_names" }
   - {role: minions,            when: "'minions'           in group_names" }
