--- a/ansible/roles/primary-master/tasks/main.yaml
+++ b/ansible/roles/primary-master/tasks/main.yaml
@@ -28,25 +28,11 @@
 - name: Apply network plugin yaml
   shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/net.yaml
 
-- name: Remove 'NodeRestriction' from apiserver
-  command: "perl -pi -e 's/--admission-control=(.*)NodeRestriction(.*)/--admission-control=$1$2/; s/,,/,/g' /etc/kubernetes/manifests/kube-apiserver.yaml"
+- name: Archive /etc/kubernetes/pki/ca.*
+  archive: path=/etc/kubernetes/pki/ca.* dest=/tmp/master-certs.tar.gz
 
-#  command: "perl -pi -e 's/.*--admission-control=.*/    - --admission-control=NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,ResourceQuota,DefaultTolerationSeconds/' /etc/kubernetes/manifests/kube-apiserver.yaml"
-
-- name: Restart docker
-  systemd: name=docker state=restarted enabled=yes
-
-- name: Restart kubelet
-  systemd: name=kubelet state=restarted enabled=yes
-
-- name: Wait for apiserver to be restarted
-  shell: export KUBECONFIG=/etc/kubernetes/admin.conf; it=0; while ! kubectl get nodes; do test $it -gt {{ APISERVER_READY_WAIT_SEC }} && exit 1; echo "Waiting for apiserver to be restarted..."; sleep 2s; it=`expr $it + 1`; done
+- name: Fetch /tmp/master-certs.tar.gz
+  fetch: src=/tmp/master-certs.tar.gz dest=/tmp/ flat=yes
 
 - name: Wait for master node to be ready
   shell: export KUBECONFIG=/etc/kubernetes/admin.conf; it=0; while kubectl get nodes | grep -q "NotReady"; do test $it -gt {{ MASTER_READY_WAIT_SEC }} && exit 1; echo "Waiting for primary node to be ready..."; sleep 2s; it=`expr $it + 1`; done
-
-- name: Create archive from /etc/kubernetes
-  archive: path=/etc/kubernetes dest=/tmp/kubernetes-conf.tar.gz
-
-- name: Fetch archive /tmp/kubernetes-conf.tar.gz
-  fetch: src=/tmp/kubernetes-conf.tar.gz dest=/tmp/ flat=yes
