Fixes: - uninstall playbook did not clean states in various directories under /var/lib Improvements: - slightly faster install of masters after some reorganisation - prepare-nodes role can be skipped by using tags in cluster-setup playbook

--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -42,6 +42,7 @@
   - {role: client-certs,       when: "'masters'           in group_names" }
   - {role: primary-master,     when: "'primary-master'    in group_names" }
   - {role: secondary-masters,  when: "'secondary-masters' in group_names" }
+  - {role: network-plugin,     when: "'primary-master'    in group_names" }
   - {role: ha-settings,        when: "'primary-master'    in group_names" }
   tags:
   - masters
