Bugfix: fetching images did not work because the variable carrying the network plugin version did not get propagated properly. Feature: automatically label all minions for use with fluentd, new groups 'elasticsearch' (for elasticsearch instances) and 'workers' (for the rest), you will need to adapt your inventory

--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -57,6 +57,7 @@
   - {role: join-token,         when: "'primary-master'    in group_names" }
   - {role: minions,            when: "'minions'           in group_names" }
   - {role: enable-scheduling,  when: "'primary-master'    in group_names" }
+  - {role: label-minions,      when: "'primary-master'    in group_names" }
   tags:
   - minions
 
