--- a/ansible/cluster-images.yaml
+++ b/ansible/cluster-images.yaml
@@ -3,12 +3,12 @@
 #
 --- 
 
-- name: Prepare image lists
+- name: Pull docker images for Kubernetes
   hosts: nodes
   remote_user: root
   gather_facts: no
   any_errors_fatal: yes
-  tasks:
+  pre_tasks:
   - name: Make sure that kubectl is installed on the primary master if 'weavenet' network plugin was selected
     package: name=kubectl-{{ KUBERNETES_VERSION }} state=present
     when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
@@ -22,15 +22,6 @@
   - name: Register names and versions of images to pull
     local_action: command "/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
     register: NETWORK_PLUGIN_IMAGE_SPECS_RESULT
-  tags:
-  - fetch-images
-  - install-images
-
-- name: Pull docker images for Kubernetes
-  hosts: nodes
-  remote_user: root
-  gather_facts: no
-  any_errors_fatal: yes
   roles:
   - fetch-images
   tags:
@@ -41,6 +32,20 @@
   remote_user: root
   gather_facts: no
   any_errors_fatal: yes
+  pre_tasks:
+  - name: Make sure that kubectl is installed on the primary master if 'weavenet' network plugin was selected
+    package: name=kubectl-{{ KUBERNETES_VERSION }} state=present
+    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+  - name: Get KUBECTL_VERSION for 'weavenet' network plugin if appliccable
+    shell: kubectl version | base64 | tr -d '\n'
+    register: KUBECTL_VERSION
+    when: "'primary-master' in group_names and NETWORK_PLUGIN == 'weavenet'"
+  - name: Generate script for registering names and versions of images to pull
+    local_action: template mode=0755 src="{{ playbook_dir }}/roles/primary-master/templates/get-{{ NETWORK_PLUGIN }}-image-specs.sh.j2" dest="/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
+    when: "'primary-master' in group_names"
+  - name: Register names and versions of images to pull
+    local_action: command "/tmp/get-{{ NETWORK_PLUGIN }}-image-specs.sh"
+    register: NETWORK_PLUGIN_IMAGE_SPECS_RESULT
   roles:
   - install-images
   tags:
