--- a/ansible/roles/uninstall/tasks/main.yaml
+++ b/ansible/roles/uninstall/tasks/main.yaml
@@ -29,17 +29,17 @@
   file: path=/var/lib/etcd/default.etcd state=absent
   when: "'masters' in group_names"
 
-- name: Clean up /var/lib/cni on all masters
+- name: Clean up /var/lib/cni on all nodes
   file: path=/var/lib/cni state=absent
-  when: "'masters' in group_names"
 
-- name: Clean up /var/lib/kubelet on all masters
+- name: Clean up /var/lib/kubelet on all nodes
   file: path=/var/lib/kubelet state=absent
-  when: "'masters' in group_names"
 
-- name: Re-create /var/lib/kubelet on all masters
+- name: Re-create /var/lib/kubelet on all nodes
   file: path=/var/lib/kubelet state=directory mode=0755
-  when: "'masters' in group_names"
+
+- name: Delete cni0 network device
+  command: "ip link delete cni0"
 
 - name: Clean up etcd certificates on all masters
   file: path=/etc/etcd/pki state=absent
