--- a/ansible/roles/install-images/tasks/main.yaml
+++ b/ansible/roles/install-images/tasks/main.yaml
@@ -3,17 +3,17 @@
 #
 ---
 - name: Copy Kubernetes images
-  copy: src="/tmp/{{ (item.name + item.tag) | hash('sha256') }}.tar" dest="/tmp/{{ (item.name + item.tag) | hash('sha256') }}.tar"
+  copy: src="/tmp/{{ (item.name + ':' + item.tag) | hash('sha256') }}.tar" dest="/tmp/{{ (item.name + ':' + item.tag) | hash('sha256') }}.tar"
   with_items: "{{ DOCKER_IMAGES }}"
 
 - name: Copy network plugin images
   copy: src="/tmp/{{ item | hash('sha256') }}.tar" dest="/tmp/{{ item | hash('sha256') }}.tar"
-  with_items: "{{ NETWORK_PLUGIN_IMAGE_SPECS_RESULT.stdout_lines | unique }}"
+  with_items: "{{ NETWORK_PLUGIN_IMAGE_SPECS_RESULT.stdout_lines }}"
 
 - name: Load Kubernetes images
-  command: /usr/bin/docker load -i /tmp/{{ (item.name + item.tag) | hash('sha256') }}.tar
+  command: /usr/bin/docker load -i /tmp/{{ (item.name + ':' + item.tag) | hash('sha256') }}.tar
   with_items: "{{ DOCKER_IMAGES }}"
 
 - name: Load network plugin images
   command: /usr/bin/docker load -i /tmp/{{ item | hash('sha256') }}.tar
-  with_items: "{{ NETWORK_PLUGIN_IMAGE_SPECS_RESULT.stdout_lines | unique }}"
+  with_items: "{{ NETWORK_PLUGIN_IMAGE_SPECS_RESULT.stdout_lines }}"
