Fix to HA settings: connect all kubelets to the virtual IP instead of the first master's.

--- a/ansible/cluster-setup.yaml
+++ b/ansible/cluster-setup.yaml
@@ -44,6 +44,7 @@
   - {role: secondary-masters,  when: "'secondary-masters' in group_names" }
   - {role: network-plugin,     when: "'primary-master'    in group_names" }
   - {role: ha-settings,        when: "'primary-master'    in group_names" }
+  - {role: kubelet-ha,         when: "'masters'           in group_names" }
   tags:
   - masters
 
@@ -57,8 +58,26 @@
   - {role: join-token,         when: "'primary-master'    in group_names" }
   - {role: minions,            when: "'minions'           in group_names" }
   - {role: enable-scheduling,  when: "'primary-master'    in group_names" }
-  - {role: label-minions,      when: "'primary-master'    in group_names" }
+  - {role: kubelet-ha,         when: "'minions'           in group_names" }
   tags:
   - minions
 
+- name: Label minions
+  hosts: nodes
+  remote_user: root
+  gather_facts: no
+  any_errors_fatal: yes
+  roles:
+  - {role: label-minions,      when: "'primary-master'    in group_names" }
+  tags:
+  - label
 
+- name: Label minions
+  hosts: nodes
+  remote_user: root
+  gather_facts: no
+  any_errors_fatal: yes
+  roles:
+  - {role: label-minions,      when: "'primary-master'    in group_names" }
+  tags:
+  - label
