--- a/ansible/roles/label-minions/tasks/main.yaml
+++ b/ansible/roles/label-minions/tasks/main.yaml
@@ -4,25 +4,25 @@
 --- 
 
 - name: Enable fluentd on minions
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes {{ hostvars[minion]['ansible_fqdn'] }} beta.kubernetes.io/fluentd-ds-ready=\"true\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[minion]['ansible_fqdn'] }} beta.kubernetes.io/fluentd-ds-ready=\"true\""
   with_items: "{{ groups['minions'] }}"
   loop_control:
     loop_var: minion
 
 - name: Label worker nodes as "worker"
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes {{ hostvars[worker]['ansible_fqdn'] }} mine/role=\"worker\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[worker]['ansible_fqdn'] }} mine/role=\"worker\""
   with_items: "{{ groups['workers'] }}"
   loop_control:
     loop_var: worker
 
 - name: Label elasticsearch nodes as "elasticsearch"
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes {{ hostvars[eshnode]['ansible_fqdn'] }} mine/role=\"elasticsearch-hot\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[eshnode]['ansible_fqdn'] }} mine/role=\"elasticsearch-hot\""
   with_items: "{{ groups['elasticsearch-hot'] }}"
   loop_control:
     loop_var: eshnode
 
 - name: Label elasticsearch nodes as "elasticsearch"
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes {{ hostvars[eswnode]['ansible_fqdn'] }} mine/role=\"elasticsearch-warm\""
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl label nodes --overwrite=true {{ hostvars[eswnode]['ansible_fqdn'] }} mine/role=\"elasticsearch-warm\""
   with_items: "{{ groups['elasticsearch-warm'] }}"
   loop_control:
     loop_var: eswnode
