--- a/ansible/roles/upgrade-nodes/tasks/upgrade-master.yaml
+++ b/ansible/roles/upgrade-nodes/tasks/upgrade-master.yaml
@@ -9,7 +9,7 @@
 ---
 
 - name: Cordon master node
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl cordon {{ hostvars[master]['ansible_fqdn'] }}"
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl cordon {{ hostvars[master]['ansible_hostname'] }}"
   when: "'primary-master' in group_names"
 
 - name: Shut down keepalived, kubelet, docker on master
@@ -37,5 +37,5 @@
   when: "'primary-master' in group_names"
 
 - name: Uncordon master node
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[master]['ansible_fqdn'] }}"
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[master]['ansible_hostname'] }}"
   when: "'primary-master' in group_names"
