--- a/ansible/roles/upgrade-nodes/tasks/upgrade-minion.yaml
+++ b/ansible/roles/upgrade-nodes/tasks/upgrade-minion.yaml
@@ -9,7 +9,7 @@
 ---
 
 - name: Drain minion node
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl drain --delete-local-data --ignore-daemonsets {{ hostvars[minion]['ansible_fqdn'] }}"
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl drain --delete-local-data --ignore-daemonsets {{ hostvars[minion]['ansible_hostname'] }}"
   when: "'primary-master' in group_names"
 
 - name: Shut down kubelet and docker on minion node
@@ -31,5 +31,5 @@
   when: "minion == inventory_hostname"
 
 - name: Uncordon minion node
-  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[minion]['ansible_fqdn'] }}"
+  shell: "export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl uncordon {{ hostvars[minion]['ansible_hostname'] }}"
   when: "'primary-master' in group_names"
