--- a/ansible/roles/dashboard/tasks/main.yaml
+++ b/ansible/roles/dashboard/tasks/main.yaml
@@ -21,14 +21,14 @@
     warn: no
 
 - name: Edit the dashboard yaml
-  local_action: "command perl -pi -e 's/      targetPort: 8443/      targetPort: 8443\\n      nodePort: 30443\\n  type: NodePort/m' /tmp/kubernetes-dashboard.yaml"
+  local_action: "replace regexp='      targetPort: 8443' replace='      targetPort: 8443\\n      nodePort: 30443\\n  type: NodePort' path=/tmp/kubernetes-dashboard.yaml"
   when: "not HAS_LB"
 
 - name: clone heapster git to /tmp
   local_action: "script clone-heapster.sh"
 
 - name: Edit grafana yaml
-  local_action: "shell perl -pi -e 's/# *type: *NodePort/type: NodePort/' /tmp/heapster/deploy/kube-config/influxdb/grafana.yaml"
+  local_action: "replace regexp='^( *)# *type: *NodePort' replace='\\1type: NodePort' path=/tmp/heapster/deploy/kube-config/influxdb/grafana.yaml"
   when: "not HAS_LB"
 
 - name: Create setup directory 
@@ -47,7 +47,13 @@
   synchronize: src=/tmp/heapster dest=/root/setup/dashboard/
 
 - name: Add nodeSelector for mine/role=worker to dashboard, influxdb, heapster and grafana
-  shell: "perl -pi -e 's|^( +)containers:|$1nodeSelector:\\n$1  mine/role: worker\\n$1containers:|m' /root/setup/dashboard/kubernetes-dashboard.yaml /root/setup/dashboard/heapster/deploy/kube-config/influxdb/*.yaml /root/setup/dashboard/heapster/deploy/kube-config/rbac/heapster-rbac.yaml"
+  replace: "regexp='^( +)containers:' replace='\\1nodeSelector:\\n\\1  mine/role: worker\\n\\1containers:' path='{{ item }}'"
+  with_items:
+  - /root/setup/dashboard/kubernetes-dashboard.yaml
+  - /root/setup/dashboard/heapster/deploy/kube-config/influxdb/grafana.yaml
+  - /root/setup/dashboard/heapster/deploy/kube-config/influxdb/heapster.yaml
+  - /root/setup/dashboard/heapster/deploy/kube-config/influxdb/influxdb.yaml
+  - /root/setup/dashboard/heapster/deploy/kube-config/rbac/heapster-rbac.yaml
 
 - name: Install dashboard
   shell: export KUBECONFIG=/etc/kubernetes/admin.conf; kubectl apply -f /root/setup/dashboard/kubernetes-dashboard.yaml
