--- a/ansible/roles/nginx/tasks/main.yaml
+++ b/ansible/roles/nginx/tasks/main.yaml
@@ -17,7 +17,7 @@
   when: "'primary-master' in group_names"
 
 - name: Edit current kube-proxy settings
-  command: "perl -pi -e 's|server: *https://.*:6443|server: https://{{ MASTER_VIP }}:8443|' /tmp/kube-proxy-cm.yaml"
+  replace: "regexp='server: *https://.*:6443' replace='server: https://{{ MASTER_VIP }}:8443' path='/tmp/kube-proxy-cm.yaml'"
   when: "'primary-master' in group_names"
 
 - name: Apply edited kube-proxy settings
