--- a/ansible/group_vars/all.yaml
+++ b/ansible/group_vars/all.yaml
@@ -36,12 +36,12 @@ KUBERNETES_DNS_VERSION: "1.14.7"
 KUBERNETES_CNI_VERSION: "0.6.0"
 ETCD_VERSION: "3.2.15"
 KEEPALIVED_VERSION: "1.3.5"
-NGINX_VERSION: "1.12.2"
 
 # Tags for some images
 ETCD_TAG: "3.0.17"
 PAUSE_TAG: "3.0"
 ETCD_OPERATOR_TAG: "v0.2.1"
+NGINX_VERSION: "1.14.0"
 
 # Images for prefetching
 DOCKER_IMAGES: [
@@ -54,6 +54,7 @@ DOCKER_IMAGES: [
   { name: "gcr.io/google_containers/k8s-dns-dnsmasq-nanny-{{ HOST_ARCH }}", tag: "{{ KUBERNETES_DNS_VERSION }}" },
   { name: "gcr.io/google_containers/etcd-{{ HOST_ARCH }}", tag: "{{ ETCD_TAG }}" },
   { name: "gcr.io/google_containers/pause-{{ HOST_ARCH }}", tag: "{{ PAUSE_TAG }}" },
-  { name: "quay.io/coreos/etcd-operator", tag: "{{ ETCD_OPERATOR_TAG }}" }
+  { name: "quay.io/coreos/etcd-operator", tag: "{{ ETCD_OPERATOR_TAG }}" },
+  { name: "nginx", tag: "{{ NGINX_TAG }}" }
 ]
 
